--- a/style.css
+++ b/style.css
@@ -36,18 +36,18 @@ h1 {
 .time h2{
   display: block;
   font-size: 2.5em;
-  color: red;
+  color: rgba(255, 0, 0, 0.888);
   font-weight: bold;
 }
 .time span{
   display: block;
   font-size: 2.5em;
-  color: red;
+  color: rgba(255, 0, 0, 0.803);
   font-weight: bold;
 }
 
 .time p {
   margin: 0;
   font-size: 1em;
-  color: #333;
+  color: #333333;
 }
